# chimera

./: .cursorignore  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.rocky10  Dockerfile.rocky9  Dockerfile.ubuntu22.04  Dockerfile.ubuntu24.04  Dockerfile.ubuntu26.04  Makefile  README.md  build.sh  call-claude  call-codex  chimera-docker.json  log  test  test.c
ext/: CMakeLists.txt
kvm/: CMakeLists.txt  Dockerfile.kvm  Dockerfile.ubuntu2404  autounattend.xml  build_vm_image.sh  build_windows_image.sh  fetch_vm_image.sh  init.sh  kvm_nfs3_drc_reboot_test_wrapper.sh  kvm_nfs40_drc_reboot_test_wrapper.sh  kvm_nfs_kerberos_test_wrapper.sh  kvm_nfs_multinode_test_wrapper.sh  kvm_nfs_reboot_test_wrapper.sh  kvm_nfs_test_wrapper.sh  kvm_nfstest_2client_test_wrapper.sh  kvm_nfstest_test_wrapper.sh  kvm_pnfs_block_test_wrapper.sh  kvm_pnfs_proxy_test_wrapper.sh  kvm_pnfs_scsi_test_wrapper.sh  kvm_pnfs_test_wrapper.sh  kvm_smb_2client_test_wrapper.sh  kvm_smb_test_wrapper.sh  kvm_smb_windows_test_wrapper.sh  kvm_test_wrapper.sh  provision_windows.sh
kvm/tests/: CMakeLists.txt
pynfs/: CMakeLists.txt  stable-passing-tests.txt
src/: CMakeLists.txt
src/admin/: README.md  pyproject.toml
src/admin/chimera_admin/: __init__.py  __main__.py  cli.py  client.py
src/admin/debian/: changelog  control  copyright  rules
src/admin/tests/: __init__.py  conftest.py  test_api.py  test_e2e_nfs_acl.py  test_e2e_nfs_xattr.py  test_e2e_smb.py  test_e2e_smb_ea.py  test_version.py
src/client/: CMakeLists.txt  client.c  client.h  client_allocate.h  client_clone_range.c  client_clone_range.h  client_close.c  client_commit.c  client_commit.h  client_copy_range.c  client_copy_range.h  client_dispatch.c  client_dispatch.h  client_dup.h  client_fsetattr.h  client_fstat.c  client_fstat.h  client_fstatfs.c  client_fstatfs.h  client_ftruncate.c  client_getacl.h  client_internal.h  client_link.c  client_link.h  client_lock.h  client_mkdir.c  client_mkdir.h  client_mknod.c  client_mknod.h  client_mount.c  client_open.c  client_open.h  client_read.c  client_read.h  client_read_into.c  client_read_into.h  client_readdir.c  client_readdir.h  client_readlink.c  client_readlink.h  (+18 more)
src/client/tests/: CMakeLists.txt  basic.c  client_test_common.h  read_into.c  test_fstat.c  test_ftruncate.c  test_io.c  test_link.c  test_readlink.c  test_remove.c  test_rename.c  test_stat.c  test_symlink.c
src/common/: CMakeLists.txt  chimera_tracing.c  chimera_tracing.h  common_config.h  evpl_iovec_cursor.h  format.h  logging.c  logging.h  macros.h  misc.h  pthread_create_interpose.c  pthread_util.h  rbtree.h  snprintf.c  snprintf.h  tcp_flavor.h  test_users.h  varint.h
src/common/tests/: CMakeLists.txt  rbtree_test.c
src/cufile/: CMakeLists.txt  chimera_cufile.c  chimera_cufile.h
src/cufile/tests/: CMakeLists.txt  basic.cu
src/daemon/: CMakeLists.txt  chimera.json  chimera.json.license  daemon.c  daemon.h.in
src/elbencho/: CMakeLists.txt  elbencho_chimera.c
src/elbencho/tests/: CMakeLists.txt  diskfs_io_uring.json  memfs_basic.json  verify_async.sh
src/fio/: CMakeLists.txt  fio.c
src/fio/tests/: CMakeLists.txt  demofs_aio_basic.fio  demofs_aio_basic.json  demofs_basic.fio  demofs_basic.json  demofs_config.json  demofs_io_uring_basic.fio  demofs_io_uring_basic.json  diskfs_aio_basic.fio  diskfs_aio_basic.json  diskfs_io_uring_basic.fio  diskfs_io_uring_basic.json  memfs_basic.fio  memfs_basic.json  suppressions.txt
src/metrics/: CMakeLists.txt  metrics.c  metrics.h
src/nfs/: CMakeLists.txt  mount.x  nfs.c  nfs3.x  nfs3_attr.h  nfs3_dump.c  nfs3_open_cache.h  nfs3_proc_access.c  nfs3_proc_commit.c  nfs3_proc_create.c  nfs3_proc_fsinfo.c  nfs3_proc_fsstat.c  nfs3_proc_getattr.c  nfs3_proc_link.c  nfs3_proc_lookup.c  nfs3_proc_mkdir.c  nfs3_proc_mknod.c  nfs3_proc_null.c  nfs3_proc_pathconf.c  nfs3_proc_read.c  nfs3_proc_readdir.c  nfs3_proc_readdirplus.c  nfs3_proc_readlink.c  nfs3_proc_remove.c  nfs3_proc_rename.c  nfs3_proc_rmdir.c  nfs3_proc_setattr.c  nfs3_proc_symlink.c  nfs3_proc_write.c  nfs3_procs.c  nfs3_procs.h  nfs3_status.h  nfs4.x  nfs4_attr.h  nfs4_dump.c  nfs4_dump.h  nfs4_proc_access.c  nfs4_proc_close.c  nfs4_proc_commit.c  nfs4_proc_compound.c  (+32 more)
src/nfs_common/: CMakeLists.txt  mount.x  nfs3_attr.h  nfs3_status.h  nfs4.x  nfsacl.x  nlm4.x  portmap.x  sm_inter.x
src/nfs_common/tests/: CMakeLists.txt  nfs3_fh_test.c
src/posix/: CMakeLists.txt  posix.c  posix.h  posix_chmod.c  posix_chown.c  posix_clone_file_range.c  posix_close.c  posix_copy_file_range.c  posix_dispatch.c  posix_dup.c  posix_dup2.c  posix_faccessat.c  posix_fallocate.c  posix_fchmod.c  posix_fchmodat.c  posix_fchown.c  posix_fchownat.c  posix_fclose.c  posix_fcntl.c  posix_fdatasync.c  posix_fdopen.c  posix_feof.c  posix_fflush.c  posix_fgetc.c  posix_fgets.c  posix_fileno.c  posix_fopen.c  posix_fputc.c  posix_fputs.c  posix_fread.c  posix_fseek.c  posix_fstat.c  posix_fstatat.c  posix_fsync.c  posix_ftruncate.c  posix_fwrite.c  posix_getacl.c  posix_internal.c  posix_internal.h  posix_lchown.c  (+40 more)
src/posix/tests/: CMakeLists.txt  basic.c  cthon_basic_1.c  cthon_basic_2.c  cthon_basic_3.c  cthon_basic_4.c  cthon_basic_4a.c  cthon_basic_5.c  cthon_basic_5a.c  cthon_basic_5b.c  cthon_basic_6.c  cthon_basic_7.c  cthon_basic_8.c  (+89 more)
src/server/: CMakeLists.txt  cluster.c  cluster.h  protocol.h  server.c  server.h  server_internal.h  vfs.h  vfs_dump.c
src/vfs/: CMakeLists.txt  protocol.h  vfs.c  vfs.h  vfs_access.c  vfs_access.h  vfs_acl.c  vfs_acl.h  vfs_acl_posix.c  vfs_acl_posix.h  vfs_acl_serialize.c  vfs_acl_serialize.h  vfs_attr_cache.h  vfs_attrs.h  vfs_clock.h  vfs_cred.h  vfs_dump.c  vfs_dump.h  vfs_error.h  vfs_fh.h  vfs_fsid.h  vfs_identity.c  vfs_identity.h  vfs_idmap.c  vfs_idmap.h  vfs_internal.h  vfs_lease_kv_keys.h  vfs_lease_types.h  vfs_lsan.c  vfs_mount_table.h  vfs_name_cache.h  vfs_notify.c  vfs_notify.h  vfs_open_cache.h  vfs_pnfs.c  vfs_pnfs.h  vfs_proc_access.c  vfs_proc_allocate.c  vfs_proc_begin_transaction.c  vfs_proc_clone_range.c  (+69 more)
(+752 files in other folders)
